--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ jaegerVersion=1.5.0
 vertxVersion=4.0.2
 junitVersion=5.6.2
 shadowPluginVersion=6.1.0
-guavaVersion=26.0-jre
+guavaVersion=30.0-jre
 keycloakVersion=12.0.4
 databasesandlifeVersion=14.0.0
 micrometerVersion=1.6.2
@@ -17,3 +17,4 @@ jmhVersion=1.25
 testcontainersVersion=1.15.1
 rmeePluginsVersion=1.1.20200614081240
 postgresqlVersion=42.2.18
+googleProtobufJavaVersion=3.20.1
