--- a/spellsource-discord/build.gradle
+++ b/spellsource-discord/build.gradle
@@ -12,7 +12,7 @@ dependencies {
     implementation 'org.slf4j:slf4j-api:1.7.22'
     implementation 'org.jetbrains:annotations:16.0.2'
     runtimeOnly 'ch.qos.logback:logback-classic:1.2.3'
-    implementation 'com.google.guava:guava:26.0-jre'
+    implementation "com.google.guava:guava:$guavaVersion"
 
     testImplementation project(':spellsource-testutils')
 
