--- a/spellsource-protos/build.gradle
+++ b/spellsource-protos/build.gradle
@@ -15,7 +15,7 @@ buildscript {
 }
 
 plugins {
-    id 'com.google.protobuf' version '0.8.16'
+    id 'com.google.protobuf' version '0.8.18'
 }
 
 apply plugin: 'com.google.protobuf'
@@ -33,14 +33,14 @@ def csharpGrpcPath = "$project.rootProject.projectDir/bin/grpc_csharp_plugin" + 
 dependencies {
     api group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
     // https://mvnrepository.com/artifact/com.google.api.grpc/proto-google-common-protos
-    api group: 'com.google.api.grpc', name: 'proto-google-common-protos', version: '1.17.0'
-    api(group: 'com.google.protobuf', name: 'protobuf-java-util', version: '3.13.0') {
+    api group: 'com.google.api.grpc', name: 'proto-google-common-protos', version: '2.0.1'
+    api(group: 'com.google.protobuf', name: 'protobuf-java-util', version: "$googleProtobufJavaVersion") {
         exclude group: 'com.google.code.gson', module: 'gson'
     }
-    api('com.google.protobuf:protobuf-java:3.13.0') {
+    api("com.google.protobuf:protobuf-javalite:$googleProtobufJavaVersion") {
         exclude group: 'com.google.code.gson', module: 'gson'
     }
-    api('com.google.protobuf:protobuf-java-util:3.13.0') {
+    api("com.google.protobuf:protobuf-java-util:$googleProtobufJavaVersion") {
         exclude group: 'com.google.code.gson', module: 'gson'
     }
     api("com.hubspot.jackson:jackson-datatype-protobuf:0.9.12") {
@@ -121,7 +121,7 @@ task protosChanged(group: 'Spellsource') {
 
 protobuf {
     protoc {
-        artifact = 'com.google.protobuf:protoc:3.13.0'
+        artifact = "com.google.protobuf:protoc:$googleProtobufJavaVersion"
     }
     plugins {
         grpc_java {
