--- a/spellsource-server/build.gradle
+++ b/spellsource-server/build.gradle
@@ -168,7 +168,7 @@ dependencies {
     testImplementation group: 'io.vertx', name: 'vertx-junit5', version: vertxVersion
     testImplementation group: 'io.vertx', name: 'vertx-web-client', version: vertxVersion
     testImplementation group: 'io.vertx', name: 'vertx-web-common', version: vertxVersion
-    testImplementation 'com.google.guava:guava:26.0-jre'
+    testImplementation "com.google.guava:guava:$guavaVersion"
     testImplementation "io.github.classgraph:classgraph:$classgraphVersion"
     testImplementation 'org.jetbrains:annotations:16.0.2'
     testImplementation "org.junit.jupiter:junit-jupiter-api:$junitVersion"
