--- a/spellsource-testutils/build.gradle
+++ b/spellsource-testutils/build.gradle
@@ -23,6 +23,6 @@ dependencies {
     implementation 'org.jetbrains:annotations:16.0.2'
     implementation 'org.apache.commons:commons-lang3:3.7'
     implementation 'commons-io:commons-io:2.4'
-    implementation 'com.google.guava:guava:26.0-jre'
+    implementation "com.google.guava:guava:$guavaVersion"
     runtimeOnly "org.junit.jupiter:junit-jupiter-engine:5.6.2"
 }
