--- a/spellsource-containers/src/main/resources/docker/keycloak/Dockerfile
+++ b/spellsource-containers/src/main/resources/docker/keycloak/Dockerfile
@@ -1,3 +1,3 @@
-FROM ghcr.io/zcube/bitnami-compat/keycloak:16.1.1-debian-10-r0
+FROM docker.io/bitnami/keycloak:16.1.1
 COPY keycloak-scrypt.jar /opt/bitnami/keycloak/standalone/deployments/
 EXPOSE 8080
