--- a/spellsource-discord/build.gradle
+++ b/spellsource-discord/build.gradle
@@ -9,8 +9,8 @@ apply plugin: 'application'
 apply plugin: 'com.github.johnrengelman.shadow'
 
 dependencies {
-    implementation 'org.slf4j:slf4j-api:1.7.36'
-    implementation 'org.jetbrains:annotations:16.0.2'
+    implementation 'org.slf4j:slf4j-api'
+    implementation 'org.jetbrains:annotations'
     runtimeOnly 'ch.qos.logback:logback-classic:1.2.11'
     implementation "com.google.guava:guava:$guavaVersion"
 
