--- a/gradle.properties
+++ b/gradle.properties
@@ -1,21 +1,20 @@
 org.gradle.parallel=true
 org.gradle.vfs.watch=true
 org.gradle.caching=true
-classgraphVersion=4.8.90
-jacksonVersion=2.13.2
-jacksonDatabindVersion=2.13.2
-spellsourceVersion=0.8.89
-jaegerVersion=1.5.0
-vertxVersion=4.2.7
-junitVersion=5.6.2
+classgraphVersion=4.8.152
+jacksonVersion=2.14.1
+jacksonDatabindVersion=2.14.1
+jaegerVersion=1.8.1
+vertxVersion=4.3.5
+junitVersion=5.9.1
 shadowPluginVersion=7.1.2
-guavaVersion=30.0-jre
+guavaVersion=31.1-jre
 keycloakVersion=16.1.1
 databasesandlifeVersion=18.2.0
-micrometerVersion=1.6.2
-jmhVersion=1.25
-testcontainersVersion=1.17.1
-rmeePluginsVersion=1.1.20200614081240
-postgresqlVersion=42.2.18
+micrometerVersion=1.10.2
+jmhVersion=1.36
+testcontainersVersion=1.17.6
+postgresqlVersion=42.5.1
+nettyVersion=4.1.85.Final
 grpcVersion=1.45.0
 protocVersion=3.19.2
