--- a/spellsource-game/build.gradle
+++ b/spellsource-game/build.gradle
@@ -12,10 +12,10 @@ dependencies {
     implementation "io.github.classgraph:classgraph:$classgraphVersion"
     implementation project(':vertx-sync')
 
-    implementation 'org.slf4j:slf4j-api:1.7.36'
-    api 'org.jetbrains:annotations:16.0.2'
+    implementation 'org.slf4j:slf4j-api'
+    api 'org.jetbrains:annotations'
     implementation "com.google.guava:guava:$guavaVersion"
-    implementation 'org.apache.commons:commons-lang3:3.7'
-    implementation 'org.apache.commons:commons-math3:3.7'
+    implementation 'org.apache.commons:commons-lang3:3.12.0'
+    implementation 'org.apache.commons:commons-math3:3.6.1'
     implementation 'commons-io:commons-io:2.11.0'
 }
