--- a/spellsource-server/build.gradle
+++ b/spellsource-server/build.gradle
@@ -80,18 +80,14 @@ dependencies {
     api project(':spellsource-game')
     api project(':spellsource-cards-git')
     api project(':vertx-sync')
-    api "io.vertx:vertx-rx-java2:$vertxVersion"
     implementation "io.github.classgraph:classgraph:$classgraphVersion"
     implementation group: 'io.vertx', name: 'vertx-infinispan', version: vertxVersion
     implementation group: 'io.vertx', name: 'vertx-web-client', version: vertxVersion
     implementation group: 'io.vertx', name: 'vertx-service-discovery', version: vertxVersion
     implementation group: 'io.vertx', name: 'vertx-web', version: vertxVersion
-    implementation group: 'io.vertx', name: 'vertx-mongo-client', version: vertxVersion
-    implementation group: 'org.graalvm.truffle', name: 'truffle-api', version: '20.2.0'
-    implementation group: 'org.graalvm.js', name: 'js', version: '20.2.0'
 
     // keycloak
-    implementation 'net.openhft:zero-allocation-hashing:0.11'
+    implementation 'net.openhft:zero-allocation-hashing:0.16'
     implementation platform("org.keycloak.bom:keycloak-bom-parent:$keycloakVersion")
     implementation(group: 'org.keycloak', name: 'keycloak-admin-client', version: "$keycloakVersion") {
         exclude group: 'org.jboss.resteasy', module: 'resteasy-client'
@@ -100,9 +96,7 @@ dependencies {
     implementation "org.keycloak:keycloak-server-spi-private:$keycloakVersion"
 
     // environment
-    implementation "ch.qos.logback:logback-classic:1.2.11"
-    implementation 'org.slf4j:slf4j-simple:1.7.36'
-    implementation group: 'org.codehaus.groovy', name: 'groovy', version: '3.0.7'
+    implementation "ch.qos.logback:logback-classic"
     implementation("com.databasesandlife:java-common:$databasesandlifeVersion") {
         exclude group: 'com.google.gdata', module: '*'
         exclude group: 'log4j', module: '*'
@@ -111,7 +105,7 @@ dependencies {
     }
 
     implementation group: 'com.lambdaworks', name: 'scrypt', version: '1.4.0'
-    implementation group: 'commons-validator', name: 'commons-validator', version: '1.6'
+    implementation group: 'commons-validator', name: 'commons-validator', version: '1.7'
     implementation("com.fasterxml.jackson.dataformat:jackson-dataformat-smile:$jacksonVersion") {
         exclude group: 'jakarta.xml.bind', module: '*'
         exclude group: 'jakarta.activation', module: '*'
@@ -121,7 +115,7 @@ dependencies {
         exclude group: 'jakarta.activation', module: '*'
     }
 
-    implementation("com.avast.grpc.jwt:grpc-java-jwt:0.4.11") {
+    implementation("com.avast.grpc.jwt:grpc-java-jwt:0.5.8") {
         exclude group: 'com.google.code.gson'
         exclude group: 'io.grpc'
         exclude group: 'org.keycloak'
@@ -131,7 +125,7 @@ dependencies {
         exclude group: 'org.checkerframework', module: 'checker-qual'
     }
 
-    implementation('org.jboss.resteasy:resteasy-client-vertx:4.6.0.Final') {
+    implementation('org.jboss.resteasy:resteasy-client-vertx:6.2.1.Final') {
         exclude group: 'io.vertx', module: 'vertx-core'
     }
 
@@ -151,7 +145,7 @@ dependencies {
     implementation 'com.be-hase.grpc-micrometer:grpc-micrometer:0.0.2'
     implementation 'io.opentracing.contrib:opentracing-grpc:0.2.3'
     implementation "io.jaegertracing:jaeger-client:$jaegerVersion"
-    implementation("com.github.marschall:micrometer-jfr:0.5.0") {
+    implementation("com.github.marschall:micrometer-jfr:1.10.0") {
         exclude group: 'io.micrometer', module: 'micrometer-core'
     }
     implementation "org.flywaydb:flyway-core:$flywayVersion"
@@ -170,11 +164,11 @@ dependencies {
     testImplementation group: 'io.vertx', name: 'vertx-web-common', version: vertxVersion
     testImplementation "com.google.guava:guava:$guavaVersion"
     testImplementation "io.github.classgraph:classgraph:$classgraphVersion"
-    testImplementation 'org.jetbrains:annotations:16.0.2'
+    testImplementation 'org.jetbrains:annotations'
     testImplementation "org.junit.jupiter:junit-jupiter-api:$junitVersion"
     testImplementation "org.junit.jupiter:junit-jupiter-params:$junitVersion"
-    testImplementation 'uk.org.webcompere:system-stubs-jupiter:1.1.0'
-    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.6.2"
+    testImplementation 'uk.org.webcompere:system-stubs-jupiter:2.0.1'
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
 }
 
 jar {
