--- a/spellsource-testutils/build.gradle
+++ b/spellsource-testutils/build.gradle
@@ -10,15 +10,15 @@ group 'com.hiddenswitch'
 dependencies {
     api project(':spellsource-game')
     api project(':spellsource-protos')
-    api 'org.slf4j:slf4j-api:1.7.36'
+    api 'org.slf4j:slf4j-api'
     api "org.junit.jupiter:junit-jupiter-api:$junitVersion"
     api "org.junit.jupiter:junit-jupiter-params:$junitVersion"
     api "io.vertx:vertx-core:$vertxVersion"
-    api 'org.jsoup:jsoup:1.14.3'
-    api 'org.mockito:mockito-core:2.24.5'
-    implementation 'org.jetbrains:annotations:16.0.2'
-    implementation 'org.apache.commons:commons-lang3:3.7'
-    implementation 'commons-io:commons-io:2.11.0'
+    api 'org.jsoup:jsoup:1.15.3'
+    api 'org.mockito:mockito-core:4.8.0'
+    implementation 'org.jetbrains:annotations'
+    implementation 'org.apache.commons:commons-lang3:3.12.0'
+    implementation 'commons-io:commons-io'
     implementation "com.google.guava:guava:$guavaVersion"
-    runtimeOnly "org.junit.jupiter:junit-jupiter-engine:5.6.2"
+    runtimeOnly "org.junit.jupiter:junit-jupiter-engine"
 }
