--- a/.github/workflows/gradle-test.yml
+++ b/.github/workflows/gradle-test.yml
@@ -1,14 +1,7 @@
-# This workflow will build a Java project with Gradle
-# For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-gradle
-
-name: Java CI with Gradle
-
+name: Tests
 on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
-
+  push: {}
+  pull_request: {}
 jobs:
   build:
     runs-on: ubuntu-latest
