--- a/.github/workflows/gradle-test.yml
+++ b/.github/workflows/gradle-test.yml
@@ -10,6 +10,7 @@ jobs:
     - uses: actions/setup-java@v3
       with:
         java-version: '19'
+        distribution: temurin
     - uses: gradle/wrapper-validation-action@v1
     - name: Test with Gradle
       run: ./gradlew --no-parallel test
