add continuous development workflow
see if removing timeout reduces test flakiness

--- a/spellsource-server/build.gradle
+++ b/spellsource-server/build.gradle
@@ -357,7 +357,8 @@ jib {
         image = "eclipse-temurin:19.0.1_10-jre"
     }
     to {
-        image = 'docker.io/doctorpangloss/spellsource-server'
+        image = 'ghcr.io/hiddenswitch/spellsource'
+        tags = [project.version.toString()]
     }
     container {
         ports = ['8080']
