resolve deployment issues

--- a/spellsource-web/package.json
+++ b/spellsource-web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "spellsource-www",
-  "version": "0.9.0",
+  "version": "0.10.0-SNAPSHOT",
   "description": "Spellsource Internet presence, including documentation, wiki and editor",
   "main": "index.js",
   "scripts": {
