--- a/spellsource-web/build.gradle
+++ b/spellsource-web/build.gradle
@@ -5,8 +5,8 @@ apply plugin: 'base'
 def isWindows = Os.isFamily(Os.FAMILY_WINDOWS)
 def spellsourceDepTask = ':spellsource-web-cardeditor-support:shadowJar'
 def gatsbyBinary = "$project.projectDir/node_modules/.bin/gatsby${isWindows ? '.cmd' : ''}"
-def nodeBinary = isWindows ? "C:\\Program Files\\nodejs\\node.cmd" : "/usr/local/bin/node"
-def npmBinary = isWindows ? "C:\\Program Files\\nodejs\\npm.cmd" : "/usr/local/bin/npm"
+def nodeBinary = isWindows ? "C:\\Program Files\\nodejs\\node.cmd" : "/opt/homebrew/bin/node"
+def npmBinary = isWindows ? "C:\\Program Files\\nodejs\\npm.cmd" : "/opt/homebrew/bin/npm"
 def graalNpmPrefix = 'node_modules_graal'
 
 clean {
@@ -29,7 +29,7 @@ task npmInstall(group: 'Spellsource Internal') {
 
     doLast {
         exec {
-            commandLine npmBinary, 'install', '--legacy-peer-deps'
+            commandLine npmBinary, 'install', '--legacy-peer-deps', '-D', '--frozen-lockfile'
         }
     }
 }
