--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -21,4 +21,4 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Build Server Image
-        run: ./gradlew spellsource-server:jib
+        run: ./gradlew spellsource-server:githubDockerPush
